--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <video controls autoplay>
-    <source src="https://drive.google.com/file/d/1g4EHTlQ9IVdIbYu53uvlvi_fFwtqbCGQ/view?usp=drive_link" type="video/mp4">
+    <source src="https://drive.google.com/uc?export=download&id=1g4EHTlQ9IVdIbYu53uvlvi_fFwtqbCGQ" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </body>
